--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section id="home" class="pt-20 min-h-screen flex flex-col items-center justify-center text-center px-4">
     <div class="w-48 max-w-[200px] aspect-square overflow-hidden rounded-full shadow-lg">
       <img 
-        src="image/Fattesing Rane .jpg" 
+        src="Fattesing Rane .jpg" 
         alt="Profile" 
         class="w-full h-full object-cover"
       />
