--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h2 class="text-3xl md:text-4xl font-bold mt-4">Fattesing Rane</h2>
     <p class="text-xl text-blue-600 mt-2">Aspiring Full-Stack Developer</p>
     <p class="italic mt-2">"Building tomorrow’s web, today."</p>
-    <a href="resume/FattesingRane Resume.pdf" download class="mt-4 inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Download Resume</a>
+    <a href="FattesingRane Resume.pdf" download class="mt-4 inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Download Resume</a>
   </section>
   
   <!-- About Section -->
