--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
       </div>
     </div>
 
+     <!-- Project 4: PDF Reader -->
+    <div class="bg-white text-gray-900 rounded-lg overflow-hidden shadow-md hover:shadow-lg transform hover:scale-105 transition duration-300">
+      <img src="https://api.dicebear.com/9.x/icons/svg?seed=Kimberly" alt="Smart PDF Reader" class="w-full h-48 object-cover">
+      <div class="p-4">
+        <h3 class="text-xl font-semibold mb-2">Smart PDF Reader</h3>
+        <p class="text-sm mb-2">An smart pdf reader which not only sits in front of you but talks to you and help you connect ideas.</p>
+        <a href="#" class="text-blue-600 hover:underline text-sm">GitHub Repo (Coming Soon)</a>
+      </div>
+    </div>
+
+
   </div>
 </section>
 
