--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
       <h2 class="text-3xl font-bold mb-6">About Me</h2>
       <p class="mb-4">I'm a second-year Computer Engineering student passionate about web development and international relations. I enjoy building intuitive UIs and solving real-world problems with code. Outside tech, I am an avid swimmer and like to read on topics related to International relations.</p>
 
-      <!-- Skills -->
-      <h3 class="text-2xl font-semibold mb-4">Skills</h3>
-      <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm">
-        <span class="bg-gray-100 px-4 py-2 rounded">HTML</span>
-        <span class="bg-gray-100 px-4 py-2 rounded">CSS</span>
-        <span class="bg-gray-100 px-4 py-2 rounded">Tailwind</span>
-        <span class="bg-gray-100 px-4 py-2 rounded">JavaScript</span>
-        <span class="bg-gray-100 px-4 py-2 rounded">GitHub</span>
-        <span class="bg-gray-100 px-4 py-2 rounded">Firebase</span>
-      </div>
+     <!-- Skills -->
+        <h3 class="text-2xl font-semibold mb-4">Skills</h3>
+        <div class="grid grid-cols-2 sm:grid-cols-3 gap-4 text-sm">
+          <span class="bg-gray-100 px-4 py-2 rounded">Public Speaking</span>
+          <span class="bg-gray-100 px-4 py-2 rounded">Delegating</span>
+          <span class="bg-gray-100 px-4 py-2 rounded">Global Affair</span>
+          <span class="bg-gray-100 px-4 py-2 rounded">Geopolitics</span>
+          <span class="bg-gray-100 px-4 py-2 rounded">International Law</span>
+          <span class="bg-gray-100 px-4 py-2 rounded">Public Diplomacy</span>
+        </div>
 
       <!-- Timeline (optional) -->
       <h3 class="text-2xl font-semibold mt-10 mb-4">Education</h3>
@@ -71,6 +71,58 @@
       </div>
     </div> <!-- ✅ this div was missing! -->
   </section>
+
+   <!-- Tech Stack Section -->
+    <section id="techstack" class="py-10 bg-transparent text-black">
+      <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-3xl font-bold mb-6">Tech Stack</h2>
+        <div class="flex flex-wrap justify-center gap-8 text-5xl">
+          <div class="flex flex-wrap justify-center gap-6 mt-6">
+            <!-- Insert all the updated icon blocks here -->
+
+            <!-- HTML5 Icon with Hover Scale Effect -->
+            <div
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
+            >
+              <i class="devicon-html5-plain colored text-4xl"></i>
+              <p class="text-sm mt-2">HTML5</p>
+            </div>
+
+            <!-- CSS3 -->
+            <div
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
+            >
+              <i class="devicon-css3-plain colored text-4xl"></i>
+              <p class="text-sm mt-2">CSS3</p>
+            </div>
+
+            <!-- JavaScript -->
+            <div
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
+            >
+              <i class="devicon-javascript-plain colored text-4xl"></i>
+              <p class="text-sm mt-2">JavaScript</p>
+            </div>
+
+            <!-- GitHub -->
+            <div
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
+            >
+              <i class="devicon-github-original colored text-4xl"></i>
+              <p class="text-sm mt-2">GitHub</p>
+            </div>
+
+            <!-- Firebase -->
+            <div
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
+            >
+              <i class="devicon-firebase-plain colored text-4xl"></i>
+              <p class="text-sm mt-2">Firebase</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
   <section id="projects" class="min-h-screen py-16 px-4 flex flex-col items-center bg-transparent text-white">
   <h2 class="text-3xl font-bold mb-10">Projects</h2>
