--- a/index.html
+++ b/index.html
@@ -82,40 +82,35 @@
 
             <!-- HTML5 Icon with Hover Scale Effect -->
             <div
-              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
-            >
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300">
               <i class="devicon-html5-plain colored text-4xl"></i>
               <p class="text-sm mt-2">HTML5</p>
             </div>
 
             <!-- CSS3 -->
             <div
-              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
-            >
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300">
               <i class="devicon-css3-plain colored text-4xl"></i>
               <p class="text-sm mt-2">CSS3</p>
             </div>
 
             <!-- JavaScript -->
             <div
-              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
-            >
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300">
               <i class="devicon-javascript-plain colored text-4xl"></i>
               <p class="text-sm mt-2">JavaScript</p>
             </div>
 
             <!-- GitHub -->
             <div
-              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
-            >
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300">
               <i class="devicon-github-original colored text-4xl"></i>
               <p class="text-sm mt-2">GitHub</p>
             </div>
 
             <!-- Firebase -->
             <div
-              class="inline-block text-center transform hover:scale-150 transition-transform duration-300"
-            >
+              class="inline-block text-center transform hover:scale-150 transition-transform duration-300">
               <i class="devicon-firebase-plain colored text-4xl"></i>
               <p class="text-sm mt-2">Firebase</p>
             </div>
